<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:rotation="0"
        android:text="@string/rps"
        android:textColor="#101010"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textColor="#101010"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_gunting_com"
        app:layout_constraintStart_toEndOf="@+id/btn_gunting_user"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_kertas_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_gunting_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:padding="18dp"
            app:srcCompat="@drawable/ic_kertas" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_gunting_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_batu_user"
        app:layout_constraintStart_toStartOf="@+id/btn_kertas_user"
        app:layout_constraintTop_toBottomOf="@+id/btn_kertas_user"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:padding="18dp"
            app:srcCompat="@drawable/ic_gunting" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_batu_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_gunting_user"
        app:layout_constraintTop_toBottomOf="@+id/btn_gunting_user"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:padding="18dp"
            app:srcCompat="@drawable/ic_batu" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_gunting_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_batu_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_kertas_com"
        app:layout_constraintTop_toBottomOf="@+id/btn_kertas_com"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/img_gunting_com"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:padding="18dp"
            app:srcCompat="@drawable/ic_scissor" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_kertas_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_gunting_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/img_kertas_com"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="18dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_paper" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_batu_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_gunting_com"
        app:layout_constraintTop_toBottomOf="@+id/btn_gunting_com"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="18dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_rock" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="12dp"
        android:text="@string/user"
        android:textColor="#101010"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_kertas_user"
        app:layout_constraintEnd_toEndOf="@+id/btn_kertas_user"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/btn_kertas_user"
        app:layout_constraintTop_toBottomOf="@+id/txt_judul" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="12dp"
        android:text="@string/com"
        android:textColor="#101010"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_kertas_com"
        app:layout_constraintEnd_toEndOf="@+id/btn_kertas_com"
        app:layout_constraintStart_toStartOf="@+id/btn_kertas_com"
        app:layout_constraintTop_toBottomOf="@+id/txt_judul" />

    <ImageView
        android:id="@+id/btn_reset"
        android:layout_width="50dp"
        android:contentDescription="@string/todo"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_refresh" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>